# Legacy-Code-Archeologist

./: .gitignore  Dockerfile  Readme.md  env.py  env_dir.txt  grader.py  gym_wrapper.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  task.py
legacy_templates/: README.txt  app.db  main.py
scripts/: generate_templates.py  run_example_agent.py  validate-submission.sh
server/: __init__.py  app.py
tests/: conftest.py  test_env.py
