[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-code-archeologist"
version = "0.1.0"
description = "A benchmark environment for legacy code debugging and refactoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Admin", email = "admin@example.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "gymnasium>=0.29.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"



[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
rl = [
    "stable-baselines3>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "env*", "models*", "task*", "grader*", "inference*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
